[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooks-in-order"
version = "0.2.1"
description = "Check Jupyter notebooks were executed in order"
license = { text = "MIT" }
dependencies = ["nbformat"]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
check_notebooks_in_order = "notebooks_in_order.check_notebooks_in_order:main"
