[metadata]
name = notebooks-in-order
description = Check Jupyter notebooks were executed in order
version = 0.2.0
author = Alessandro Benetti
author_email = benettialessandro96@gmail.com
license = MIT
url = https://github.com/Benetti-Hub/notebooks-in-order

[options]
packages = find:
install_requires =
    nbformat

[build-system]
requires = ["setuptools"]

[options.entry_points]
console_scripts =
    check_notebooks_in_order = notebooks_in_order.check_notebooks_in_order:main
